--- a/SVD notebook.ipynb
+++ b/SVD notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0bc0ceef",
+   "id": "09d4593f",
    "metadata": {},
    "source": [
     "# Compresión de imágenes usando SVD\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfbc9d83",
+   "id": "674daf45",
    "metadata": {},
    "source": [
     "Importamos las siguientes paqueterías:"
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d9529cfa",
+   "id": "385fc9fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ad35a16",
+   "id": "6e34c674",
    "metadata": {},
    "source": [
     "El método es:"
@@ -46,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "fa9d6a6a",
+   "execution_count": 19,
+   "id": "a823dea1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,21 +91,69 @@
     "    #Se le aplica la raíz a los eigenvalores\n",
     "    eigval = np.sqrt(eigval)\n",
     "    \n",
-    "    sigma = eigval[::1]\n",
+    "    sigma = eigval[::-1]\n",
     "    \n",
     "    return U, sigma, Vt"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "86ef51cf",
+   "id": "c39edc44",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "38b72331",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------U-------------------\n",
+      "[[-0.28978415 -0.95709203]\n",
+      " [-0.95709203  0.28978415]]\n",
+      "\n",
+      "--------------Sigma----------------\n",
+      "[8.13872588 3.97003036]\n",
+      "\n",
+      "-------------V transpose---------------\n",
+      "[[-0.26001965 -0.65919758 -0.70558368]\n",
+      " [-0.89132415 -0.11719389  0.43795758]\n",
+      " [ 0.37139068 -0.74278135  0.55708601]]\n",
+      "[[4 2 0]\n",
+      " [1 5 6]] \n",
+      "\n",
+      "[[4.00000000e+00 2.00000000e+00 2.22044605e-16]\n",
+      " [1.00000000e+00 5.00000000e+00 6.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[4,2,0],[1,5,6]])\n",
+    "\n",
+    "U, Sigma, Vt = singular_value_descomposition(A)\n",
+    "print(\"-------------------U-------------------\")\n",
+    "print(U)\n",
+    "print(\"\\n--------------Sigma----------------\")\n",
+    "print(Sigma)\n",
+    "print(\"\\n-------------V transpose---------------\")\n",
+    "print(Vt)\n",
+    "newSigma = np.zeros((2, 3))\n",
+    "newSigma[:2, :2] = np.diag(Sigma[:2])\n",
+    "\n",
+    "print(A,\"\\n\")\n",
+    "\n",
+    "A_remake = (U @ newSigma @ Vt)\n",
+    "print(A_remake)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a328d0e4",
+   "id": "3a45c698",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -113,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e28eab6e",
+   "id": "c54edc32",
    "metadata": {},
    "outputs": [],
    "source": []
